# mulle-allocator

./: .gitattributes  .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  mulle-allocator.sublime-project  mulle_test_allocator.c  mulle_test_allocator.h  package.json  pointerarray.h
.bootstrap/: embedded_repositories  repositories
.github/workflows/: codeql.yml  install-mulle-sde.sh  mulle-sde-ci.yml  mulle-sde.yml  semgrep.yml
.mulle-env/share/: environment-aux.sh  environment-extension.sh  environment-project.sh  environment-share.sh  optionaltool
.mulle-sde/etc/match.d/: 40-test--sourcefile  46-source--test-allocator-public-headers  47-source--test-allocator-sources  50-source--private-headers  50-source--standalone-sources  55-source--public-headers  90-source--standalone-sources  95-cmakefile--all  95-source--sources
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/make/: build-dir
.mulle/etc/match/match.d/: 90-source--standalone-sources  95-cmakefile--all  95-source--sources
.mulle/etc/sourcetree/: config
.mulle/share/env/: auxscope  environment-plugin.sh  environment-project.sh  optionaltool  tool-extension
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
.travis.d/: before_install  script
assets/dox/: TOC.md
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CMakeTweaksC.cmake  CompilerFlagsC.cmake  Environment.cmake  Executable.cmake  InstallRpath.cmake  Library.cmake  LinkManifestC.cmake  Motd.cmake  PostExecutable.cmake  PostLibrary.cmake  PostSharedLibrary.cmake  Standalone.cmake  StandaloneC.cmake  StartupC.cmake
cola/: api.md.bud  config.plist  description.md.bud  info.md.bud  properties.plist
dox/: API_ALLOCATOR.md  API_TEST_ALLOCATOR.md  BUILD.md
mulle-allocator.xcodeproj/: project.pbxproj
mulle-allocator.xcodeproj/xcshareddata/xcschemes/: Libraries.xcscheme
mulle-project/: formula-info.sh
src/: _dependencies.h  _mulle-allocator-dependencies.h  _mulle-allocator-include-private.h  _mulle-allocator-include.h  dependencies.h  include.h  mulle-alloca.h  mulle-allocator-standalone.c  mulle-allocator-struct.h  mulle-allocator.c  mulle-allocator.h  mulle-memset.c  mulle-memset.h  mulle-test-allocator.c  mulle-test-allocator.h  mulle_allocator.c  mulle_allocator.h  mulle_allocator_struct.h  mulle_test_allocator.c  mulle_test_allocator.h  mulle_test_allocator_struct.h  pointerarray.h  pointerset.h  version.h
src/generic/: include-private.h  include.h
src/reflect/: _mulle-allocator-include-private.h  _mulle-allocator-include.h  _mulle-allocator-versioncheck.h
templates/: README.md.scion
templates/dox/: BUILD.md.scion
test/: coverage.json  include.h  run-test.sh
test/.mulle-env/share/: environment-project.sh
test/.mulle-sde/share/: mulle-test
test/.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/env/: environment-plugin.sh  environment.sh  tool-extension
test/.mulle/share/sde/: extension  mulle-test
test/80-package/: CMakeLists.txt  main.c  run-test
test/alloca/: alloca-pointer.c  alloca-test.c  calloca-test.c
test/coverage/: abafree.c  abafree.stdout  do-stuff.c  do-stuff.stdout  fail-stuff.c  fail-stuff.stdout
test/fails/: fail-aba-abort.c  fail-calloc.c  fail-malloc-abort.c  fail-malloc-abort.stdout  fail-malloc.c  fail-realloc-strict.c  fail-realloc.c  fail-strdup.c
test/memset/: memset.c
test/test/: badfree.c  doublefree.c  doublefree.errors  fail-calloc.c  fail-malloc.c  fail-realloc.c  goodfree.c  leak.c  noleak.c
tests/: build-test.sh  run-test.sh
tests/test/: badfree.c  badfree.errors  doublefree.c  fail-calloc.c  fail-malloc.c  fail-realloc.c  goodfree  goodfree.c  leak.c  leak.errors  noleak.c
